# Non-Linear-Model-Predictive-Control

./: CMakeLists.txt  README.md  package.xml
config/: ebs.yaml  trackdrive.yaml
include/: MPCNode.hpp  utils.hpp
include/mpc/: FG_eval.hpp  MPC.hpp  predictor.hpp
launch/: mpc.launch.py
src/: FG_eval.cpp  MPC.cpp  MPCNode.cpp  main.cpp  predictor.cpp
